--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1>SUJEETHRAJ<br />
 						KOPPOLU</h1>
-						<p>A highly skilled data scientist with 10+ years of experience in bioinformatics and machine learning applications. Have strong working experience with high-throughput data including genomics, transcriptomics, proteomics, glycomics and microbiome. Adept at analyzing NGS data using conventional and novel bioinformatic/statistical methods. Highly appreciated for generating novel insights and comprehensive data analytics leveraging a multidisciplinary background. Experienced in developing pipelines for data analysis & automation, deploying ML/DL models with both Python & R, and building comprehensive, yet interactive, tools and dashboards for data visualization. Worked with Data Engineering and Software Development teams in building cloud-based (AWS) scalable software suites for efficient data analytics. Worked with data from all phases of drug development process, including early discovery, preclinical and clinical research. Nimble at adapting to different technologies as evidenced by publications across multiple disciplines. Recipient of two prestigious fellowships during doctoral studies.</p>
+						<p>Multidisciplinary Data Scientist | Bioinformatics Expert | Machine Learning Specialist<br />
+						Data & Business Analyst | Strategic Project Leader</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
