--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>SUJEETHRAJ<br />
-						KOPPOLU</h1>
+						<h1>Dr. Sujeethraj Koppolu<br />
+						Postdoc (Machine Learning) - Ph.D. (Chemistry / Bioinformatics) - M.S. & B.E. (Biomedical Engineering)</h1>
 						<p>Multidisciplinary Data Scientist | Bioinformatics Expert | Machine Learning Specialist<br />
 						Data & Business Analyst | Strategic Project Leader</p>
 						<ul class="actions">
