--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Dr. Sujeethraj Koppolu</h1>
-						<h4>Postdoc (Machine Learning) - Ph.D. (Chemistry / Bioinformatics) - M.S. & B.E. (Biomedical Engineering)</h4>
+						<h4>Postdoc (Machine Learning) - Ph.D. (Chemistry / Bioinformatics) - M.S. & B.E. (Biomedical Engineering)<br /></h4>
 						<p>Multidisciplinary Data Scientist | Bioinformatics Expert | Machine Learning Specialist<br />
 						Data & Business Analyst | Strategic Project Leader</p>
 						<ul class="actions">
@@ -57,16 +57,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="https://srkoppolu.github.io">Dr.Sujeethraj Koppolu</a></h2>
+									<p>A highly skilled data scientist with 10+ years of experience in bioinformatics and machine learning applications. Have strong working experience with high-throughput data including genomics, transcriptomics, proteomics, glycomics and microbiome. Adept at analyzing NGS data using conventional and novel bioinformatic/statistical methods. Highly appreciated for generating novel insights and comprehensive data analytics leveraging a multidisciplinary background. Experienced in developing pipelines for data analysis & automation, deploying ML/DL models with both Python & R, and building comprehensive, yet interactive, tools and dashboards for data visualization. Worked with Data Engineering and Software Development teams in building cloud-based (AWS) scalable software suites for efficient data analytics. Worked with data from all phases of drug development process, including early discovery, preclinical and clinical research. Nimble at adapting to different technologies as evidenced by publications across multiple disciplines. Recipient of two prestigious fellowships during doctoral studies.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<!--<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul>-->
 							</article>
 
 						<!-- Posts -->
