--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Processing RNA-seq data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_RNA-Seq">Processing RNA-seq data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A generalized template for RNA-Seq pipeline with DE analysis, visualizations and enrichment analysis.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -82,10 +82,10 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Processing scRNA-seq data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_scRNA-Seq">Processing scRNA-seq data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A generalized workflow for single-cell RNA-Seq data using SimpleSingleCell template.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -93,11 +93,10 @@
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Processing mirBase data<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/srkoppolu/mirbase_processing">Processing mirBase data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This repository contains scripts to extract data from mirBase database and perform subsequent processing of this data.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -105,10 +104,10 @@
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Variant Calling Analysis</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_WES_VariantCalling">Variant Calling Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A Whole Exome Sequencing (WES) pipeline for Variant Calling analysis.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -116,10 +115,10 @@
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Processing Lectin Microarray Data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/Lectin-microarray-Processing">Processing Lectin Microarray Data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Repository for the automated processing of raw data from lectin microarrays into a normalized matrix for further analysis.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -127,10 +126,10 @@
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Bulk Package Loader</a></h2>
+										<h2><a href="https://github.com/srkoppolu/PackageLoader">Bulk Package Loader</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>The PackageLoad function checks if a list of required packages are already installed, installs the missing packages, and finally loads all the packages.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
