--- a/index.html
+++ b/index.html
@@ -71,67 +71,67 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/SK_RNA-Seq">Processing RNA-seq data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_RNA-Seq/wiki">Processing RNA-seq data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A generalized template for RNA-Seq pipeline with DE analysis, visualizations and enrichment analysis.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/SK_RNA-Seq" class="button">GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/SK_scRNA-Seq">Processing scRNA-seq data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_scRNA-Seq/wiki">Processing scRNA-seq data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>A generalized workflow for single-cell RNA-Seq data using SimpleSingleCell template.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/SK_scRNA-Seq" class="button">GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/mirbase_processing">Processing mirBase data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/mirbase_processing/wiki">Processing mirBase data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>This repository contains scripts to extract data from mirBase database and perform subsequent processing of this data.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/mirbase_processing" class="button">GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/SK_WES_VariantCalling">Variant Calling Analysis</a></h2>
+										<h2><a href="https://github.com/srkoppolu/SK_WES_VariantCalling/wiki">Variant Calling Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>A Whole Exome Sequencing (WES) pipeline for Variant Calling analysis.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/SK_WES_VariantCalling" class="button">GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/Lectin-microarray-Processing">Processing Lectin Microarray Data</a></h2>
+										<h2><a href="https://github.com/srkoppolu/Lectin-microarray-Processing/wiki">Processing Lectin Microarray Data</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Repository for the automated processing of raw data from lectin microarrays into a normalized matrix for further analysis.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/Lectin-microarray-Processing" class="button">GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
-										<h2><a href="https://github.com/srkoppolu/PackageLoader">Bulk Package Loader</a></h2>
+										<h2><a href="https://github.com/srkoppolu/PackageLoader/wiki">Bulk Package Loader</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>The PackageLoad function checks if a list of required packages are already installed, installs the missing packages, and finally loads all the packages.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/srkoppolu/PackageLoader" class="button">GitHub</a></li>
 									</ul>
 								</article>
 							</section>
