--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<li class="active"><a href="index.html">Project Portfolio</a></li>
 							<li><a href="generic.html">About Me</a></li>
 							<li><a href="elements.html">Creative Skills</a></li>
+							<li><a href="elements.html">Professional Skills</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/srkoppolu/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
